2005-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/PedView.py (__init__): Define database variable.
	* src/ViewManager.py (__init__): Define empty pages list.
	* src/DisplayState.py (GrampsWindowManager,ManagedWindow): Add
	classes for window management. Still unfinished.

2005-08-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: keep track of open files
	* src/MediaView.py: convert MediaView to handle pluggable views
	* src/PersonView.py: update filter on page change
	* src/ViewManager.py: change_database handling
	* src/gramps.glade: remove unused blocks
	* src/gramps_main.py: Add in MediaView

2005-08-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: set up about box and other HELP menu items
	* src/const.py.in: strings for about box
	* Makefile.am: install COPYING file to provide text for GPL.

2005-08-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/MapView.py: Dont fail if xearth is not installed
	
2005-08-12  Don Allingham  <don@gramps-project.org>
	* src/Navigation.py: Don't disable the interface all the time.

2005-08-12  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: start fixing.
	* src/gramps_main.py: Run ArgHandler with new arguments.

2005-08-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/MapView.py: Corrected coordinate handling; Show all locations
	in map; fetch locations from xearth config file

2005-08-12  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/EditRepository.py: changes to work with ViewManager changes

2005-08-11  Don Allingham  <don@gramps-project.org>
	* src/RepositoryView.py: added back in
	* src/gramps_main.py: added repository view

2005-08-11  Alex Roitman  <shura@gramps-project.org>
	* src/DbState.py: Remove modeule.
	* src/DisplayState.py: Rename from DbState, kepp only DisplayState
	class.
	* src/GrampsDbBase.py: Add DbState class.
	* src/MapView.py: Swap zoom_in and zoom_out to reflect reality;